src/rocksdb_c.nim


proc rocksdb_writebatch_wi_create*(reserved_bytes: csize; overwrite_keys: cuchar): ptr rocksdb_writebatch_wi_t {.
    cdecl, importc: "rocksdb_writebatch_wi_create", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_create_from*(rep: cstring; size: csize): ptr rocksdb_writebatch_wi_t {.
    cdecl, importc: "rocksdb_writebatch_wi_create_from", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_destroy*(a2: ptr rocksdb_writebatch_wi_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_destroy", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_clear*(a2: ptr rocksdb_writebatch_wi_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_clear", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_count*(b: ptr rocksdb_writebatch_wi_t): cint {.cdecl,
    importc: "rocksdb_writebatch_wi_count", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_put*(a2: ptr rocksdb_writebatch_wi_t; key: cstring;
                               klen: csize; val: cstring; vlen: csize) {.cdecl,
    importc: "rocksdb_writebatch_wi_put", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_put_cf*(a2: ptr rocksdb_writebatch_wi_t; column_family: ptr rocksdb_column_family_handle_t;
                                  key: cstring; klen: csize; val: cstring; vlen: csize) {.
    cdecl, importc: "rocksdb_writebatch_wi_put_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_putv*(b: ptr rocksdb_writebatch_wi_t; num_keys: cint;
                                keys_list: cstringArray;
                                keys_list_sizes: ptr csize; num_values: cint;
                                values_list: cstringArray;
                                values_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_wi_putv", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_putv_cf*(b: ptr rocksdb_writebatch_wi_t; column_family: ptr rocksdb_column_family_handle_t;
                                   num_keys: cint; keys_list: cstringArray;
                                   keys_list_sizes: ptr csize; num_values: cint;
                                   values_list: cstringArray;
                                   values_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_wi_putv_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_merge*(a2: ptr rocksdb_writebatch_wi_t; key: cstring;
                                 klen: csize; val: cstring; vlen: csize) {.cdecl,
    importc: "rocksdb_writebatch_wi_merge", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_merge_cf*(a2: ptr rocksdb_writebatch_wi_t; column_family: ptr rocksdb_column_family_handle_t;
                                    key: cstring; klen: csize; val: cstring;
                                    vlen: csize) {.cdecl,
    importc: "rocksdb_writebatch_wi_merge_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_mergev*(b: ptr rocksdb_writebatch_wi_t; num_keys: cint;
                                  keys_list: cstringArray;
                                  keys_list_sizes: ptr csize; num_values: cint;
                                  values_list: cstringArray;
                                  values_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_wi_mergev", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_mergev_cf*(b: ptr rocksdb_writebatch_wi_t; column_family: ptr rocksdb_column_family_handle_t;
                                     num_keys: cint; keys_list: cstringArray;
                                     keys_list_sizes: ptr csize; num_values: cint;
                                     values_list: cstringArray;
                                     values_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_wi_mergev_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_delete*(a2: ptr rocksdb_writebatch_wi_t; key: cstring;
                                  klen: csize) {.cdecl,
    importc: "rocksdb_writebatch_wi_delete", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_delete_cf*(a2: ptr rocksdb_writebatch_wi_t; column_family: ptr rocksdb_column_family_handle_t;
                                     key: cstring; klen: csize) {.cdecl,
    importc: "rocksdb_writebatch_wi_delete_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_deletev*(b: ptr rocksdb_writebatch_wi_t; num_keys: cint;
                                   keys_list: cstringArray;
                                   keys_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_wi_deletev", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_deletev_cf*(b: ptr rocksdb_writebatch_wi_t; column_family: ptr rocksdb_column_family_handle_t;
                                      num_keys: cint; keys_list: cstringArray;
                                      keys_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_wi_deletev_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_delete_range*(b: ptr rocksdb_writebatch_wi_t;
                                        start_key: cstring; start_key_len: csize;
                                        end_key: cstring; end_key_len: csize) {.
    cdecl, importc: "rocksdb_writebatch_wi_delete_range", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_delete_range_cf*(b: ptr rocksdb_writebatch_wi_t;
    column_family: ptr rocksdb_column_family_handle_t; start_key: cstring;
    start_key_len: csize; end_key: cstring; end_key_len: csize) {.cdecl,
    importc: "rocksdb_writebatch_wi_delete_range_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_delete_rangev*(b: ptr rocksdb_writebatch_wi_t;
    num_keys: cint; start_keys_list: cstringArray; start_keys_list_sizes: ptr csize;
    end_keys_list: cstringArray; end_keys_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_wi_delete_rangev", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_delete_rangev_cf*(b: ptr rocksdb_writebatch_wi_t;
    column_family: ptr rocksdb_column_family_handle_t; num_keys: cint;
    start_keys_list: cstringArray; start_keys_list_sizes: ptr csize;
    end_keys_list: cstringArray; end_keys_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_wi_delete_rangev_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_put_log_data*(a2: ptr rocksdb_writebatch_wi_t;
                                        blob: cstring; len: csize) {.cdecl,
    importc: "rocksdb_writebatch_wi_put_log_data", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_iterate*(b: ptr rocksdb_writebatch_wi_t; state: pointer;
    put: proc (a2: pointer; k: cstring; klen: csize; v: cstring; vlen: csize) {.cdecl.};
    deleted: proc (a2: pointer; k: cstring; klen: csize) {.cdecl.}) {.cdecl,
    importc: "rocksdb_writebatch_wi_iterate", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_data*(b: ptr rocksdb_writebatch_wi_t; size: ptr csize): cstring {.
    cdecl, importc: "rocksdb_writebatch_wi_data", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_set_save_point*(a2: ptr rocksdb_writebatch_wi_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_set_save_point", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_rollback_to_save_point*(
    a2: ptr rocksdb_writebatch_wi_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_writebatch_wi_rollback_to_save_point", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_get_from_batch*(wbwi: ptr rocksdb_writebatch_wi_t;
    options: ptr rocksdb_options_t; key: cstring; keylen: csize; vallen: ptr csize;
    errptr: cstringArray): cstring {.cdecl, importc: "rocksdb_writebatch_wi_get_from_batch",
                                  dynlib: librocksdb.}
proc rocksdb_writebatch_wi_get_from_batch_cf*(wbwi: ptr rocksdb_writebatch_wi_t;
    options: ptr rocksdb_options_t;
    column_family: ptr rocksdb_column_family_handle_t; key: cstring; keylen: csize;
    vallen: ptr csize; errptr: cstringArray): cstring {.cdecl,
    importc: "rocksdb_writebatch_wi_get_from_batch_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_get_from_batch_and_db*(
    wbwi: ptr rocksdb_writebatch_wi_t; db: ptr rocksdb_t;
    options: ptr rocksdb_readoptions_t; key: cstring; keylen: csize; vallen: ptr csize;
    errptr: cstringArray): cstring {.cdecl, importc: "rocksdb_writebatch_wi_get_from_batch_and_db",
                                  dynlib: librocksdb.}
proc rocksdb_writebatch_wi_get_from_batch_and_db_cf*(
    wbwi: ptr rocksdb_writebatch_wi_t; db: ptr rocksdb_t;
    options: ptr rocksdb_readoptions_t;
    column_family: ptr rocksdb_column_family_handle_t; key: cstring; keylen: csize;
    vallen: ptr csize; errptr: cstringArray): cstring {.cdecl,
    importc: "rocksdb_writebatch_wi_get_from_batch_and_db_cf", dynlib: librocksdb.}
proc rocksdb_write_writebatch_wi*(db: ptr rocksdb_t;
                                 options: ptr rocksdb_writeoptions_t;
                                 wbwi: ptr rocksdb_writebatch_wi_t;
                                 errptr: cstringArray) {.cdecl,
    importc: "rocksdb_write_writebatch_wi", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_create_iterator_with_base*(
    wbwi: ptr rocksdb_writebatch_wi_t; base_iterator: ptr rocksdb_iterator_t): ptr rocksdb_iterator_t {.
    cdecl, importc: "rocksdb_writebatch_wi_create_iterator_with_base",
    dynlib: librocksdb.}
proc rocksdb_writebatch_wi_create_iterator_with_base_cf*(
    wbwi: ptr rocksdb_writebatch_wi_t; base_iterator: ptr rocksdb_iterator_t;
    cf: ptr rocksdb_column_family_handle_t): ptr rocksdb_iterator_t {.cdecl,
    importc: "rocksdb_writebatch_wi_create_iterator_with_base_cf",
    dynlib: librocksdb.}
##  Block based table options
